added 2 icons for favourite state of vacancy VacancyMainModel.kt added title parameter, lookingNumber is not null now

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -8,4 +8,9 @@
     <string name="profile">Профиль</string>
     <string name="filter_button">Filter button</string>
     <string name="filter">Filter</string>
+    <string name="checked_company">checked company</string>
+    <string name="respond">Откликнуться</string>
+    <string name="favourite">" favourite"</string>
+    <string name="vacancies_for_you">Вакансии для вас</string>
+    <string name="experince">Опыт</string>
 </resources>
